--- a/register-student.html
+++ b/register-student.html
@@ -110,6 +110,10 @@
                                     <input type="text" placeholder="Email" required>
                                 </div>
                                 <div class="fields">
+                                    <label>Phone-Number</label>
+                                    <input type="number" placeholder="phone-number" required>
+                                </div>
+                                <div class="fields">
                                     <label>Password</label>
                                     <input type="password" placeholder="Password" required>
                                 </div>
