--- a/register-teacher.html
+++ b/register-teacher.html
@@ -85,7 +85,6 @@
         <section>
             <div class="register-contents">
                 <div class="reg-form">
-                    
                     <div class="form-container">
                         <h3>Register</h3>
 
@@ -108,6 +107,10 @@
                                 <div class="fields">
                                     <label>Email</label>
                                     <input type="text" placeholder="Email" required>
+                                </div>
+                                <div class="fields">
+                                    <label>Phone-Number</label>
+                                    <input type="number" placeholder="phone-number" required>
                                 </div>
                                 <div class="fields">
                                     <label>Password</label>
