--- a/register-parent.html
+++ b/register-parent.html
@@ -91,11 +91,11 @@
 
                         <div class="user-role-toggle">
                             <div class="toggle">
-                                <input type="radio" id="parent" name="role" value="parent" checked>
+                                <input type="radio" id="parent" name="role" value="parent" onclick="submitToggle()" checked>
                                 <label for="parent">Parent</label>
-                                <input type="radio" id="teacher" name="role" value="teacher">
+                                <input type="radio" id="teacher" name="role" value="teacher" onclick="submitToggle()">
                                 <label for="teacher">Teacher</label>
-                                <input type="radio" id="student" name="role" value="student">
+                                <input type="radio" id="student" name="role" value="student" onclick="submitToggle()">
                                 <label for="student">Student</label>
                                 <span class="slider"></span>
                             </div>
@@ -108,6 +108,10 @@
                                 <div class="fields">
                                     <label>Email</label>
                                     <input type="text" placeholder="Email" required>
+                                </div>
+                                <div class="fields">
+                                    <label>Phone-Number</label>
+                                    <input type="number" placeholder="Phone-number" required>
                                 </div>
                                 <div class="fields">
                                     <label>Password</label>
